--- a/less/media.less
+++ b/less/media.less
@@ -50,7 +50,6 @@
             width: 939.89px;
             height: 760.76px;
           
-            // transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
         }
      }
 
@@ -67,9 +66,10 @@
             left: 20px;
           z-index: 1;
             &--right {
-                left: 80%;
-                top: -138px;
-                z-index: -1;
+                left: 93%;
+                top: -33px;
+                              width: 111.32px;
+height: 168.24px;
             }
         }
         
@@ -161,10 +161,47 @@
                 left: -396px;
             }
         }
+        .dots-decorate-red {
+           
+            right: -37px;
+            bottom: -31px;
+        }
     }
+
+  
   
     .header-assistent-slider {
         left: 20%;
+    }
+
+    .academic-header .diamond-decorate {
+    
+        top: 45px;
+        left: 98%;
+    }
+
+    .academic-header .arrow-decorate{
+        width: 103.16px;
+        height: 156.28px;
+        left: 10px;
+        top: -95px
+    }
+
+    .benefits .arrow-decorate {
+        width: 121px;
+        height: 178px;
+        bottom: -151px;
+        left: 0;
+        z-index: -1;
+    }
+
+    .feedback .diamond-decorate{
+        left: -56px;
+        transform: matrix(-0.71, -0.69, -0.72, 0.71, 0, 0);
+        top: 241px;
+        .diamond-decorate-transparent{
+            display: none;
+        }
     }
 }
 
@@ -185,6 +222,17 @@
             display: none;
         }
     }
+
+    .universities .dots-decorate-red {
+        width: 66.28px;
+        height: 51.55px;
+    }
+    .admission {
+        .diamond-decorate {
+            left: -163px;
+            top: -50px;
+    }
+}
 
     .header-assistent-slider {
         left: 16%;
@@ -230,6 +278,13 @@
         display: flex;
     }
     
+    .academic-header .diamond-decorate {
+        display: none;
+    }
+
+    .academic-header .arrow-decorate{
+       display: none;
+    }
 
     
 
@@ -286,6 +341,13 @@
     
       
     }
+    .footer-form {
+
+        &__btn {
+            margin: 20px auto 0;
+        }
+    }
+    
    
 }
 
@@ -470,58 +532,10 @@
     }
 
     // 
-    .feedback-item {
-        margin: 46px 50px;
-        padding: 23px 35px;
-        background: #FFFFFF;    
-        box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
-        border-radius: 14px;
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: bold;
-        color: #0031C4;
+ 
     
-        &__inner {
-            display: grid; //
-            grid-template-areas: "img img title"
-                                    "textItem textItem textItem"
-            
-        }
     
-        &__img {
-            grid-area: img;
-            position: relative;
-            bottom: 40px;
-            display: block;
-            width: 400px;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 28px;
-            border-right: 4px solid #0031C4;
-            border-bottom: 4px solid #0031C4;
-            margin-right: 35px;
-        }
-        
-        &__title {  
-            grid-area: title;
-            font-size: 22px;
-         
-            margin-bottom: 15px;
-        }
-    
-        &__subtitle {
-            grid-area: subtitle;
-            font-size: 12px;
-            margin-bottom: 15px;
-        }
-    
-        &__text {
-            grid-area: textItem;
-            font-size: 14px;
-            color: #6F6F6F;
-        }
-    
-    }
+      
 }
 
 @media screen and (max-width: 800px) {
@@ -585,6 +599,25 @@
 
 
 @media screen and (max-width: 720px) {
+    .header-slider {
+        &__nav {
+        //    &--mobile {
+        //        display: block;
+        //    }
+
+        //    &--desktop{
+        //        display: none;
+        //    }
+    }
+}
+
+.header-slider__nav--desktop {
+    // display: none;
+}
+
+.header-slider__nav--mobile {
+    display: block;
+}
 
     .slider-line {
       display: none;
@@ -629,6 +662,35 @@
     .banner {
         display: none;
     }
+
+    .feedback-item {
+        &__inner {
+               grid-template-areas: 'img header'
+            'title title';
+        }
+     
+    &__img{
+            img {
+                position: relative;
+                bottom: 40px;
+                display: block;
+             
+                border-radius: 28px;
+                border-right: 4px solid #0031C4;
+                border-bottom: 4px solid #0031C4;
+                margin-right: 35px;
+            }
+           
+        }
+       
+    }
+
+    .header-slider__buttons {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+    }
+
 }
 
 
@@ -674,6 +736,16 @@
     display: none;
 }
 
+// header-slider__nav {
+    /* position: absolute; */
+    // position: relative;
+    // margin-top: 40px;
+    // width: 100vw;
+    // padding-bottom: 30px;
+    // max-width: 130%;
+    // left: -20px;
+// }
+
 
 .header-slider {
         
@@ -681,15 +753,17 @@
             &__nav {
                 position: relative;
                 margin-top: 40px;
+                width: 100vw;
                 padding-bottom: 30px;
-               max-width: 100%; //
-               margin: 0px -20px;
+                max-width: 100vw;
+                left: -20px;
+        
                &-list {
                 display: flex;//
                 align-items: center;//
             }
                 &-item {
-                    min-width: 18.6%;
+                    width: 16.66%;
                     padding: 9px 13px;//
                     background: linear-gradient(189.83deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);//
               
@@ -714,17 +788,11 @@
         }
 .header-slider__buttons {
     position: absolute;
+    z-index: 9999;
 
 }
-// .footer-item--contact {
-//     background: #001C53;
-//     margin: 20px 0 0 0;
-//     min-width: 100%;
-//     display: flex;
-//     justify-content: center;
-//     flex-direction: column;
-//     text-align: center;
-// }
+
+
 
 
 
