--- a/less/style.less
+++ b/less/style.less
@@ -650,6 +650,10 @@ display: none;
         margin-top: 40px;
         padding-bottom: 30px;
        max-width: 70px;
+
+       &--mobile {
+           display: none;
+       }
       
         &-item {
             font-family: Roboto;
@@ -1166,11 +1170,6 @@ display: none;
     max-width: 954.34px;
     height: 3px;
     background: linear-gradient(179.84deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);
-    &__list {
-        // display: flex;
-        // align-items: center;
-        // justify-content: space-between;
-    }
 }
 
 
@@ -1229,13 +1228,13 @@ display: none;
 }
 
 .steps-wrap{
-    margin-top: 26px;
+    margin-top: 30px;
     display: flex;
     justify-content: space-between;
 }
 
 .admission-item-wrap {
-  
+    align-items: self-end;
     display: flex;
     justify-content: space-between;
 }
@@ -1566,7 +1565,7 @@ display: none;
         position: absolute;
         bottom: 0;
         left: 6.25%;
-        z-index: 2;
+        z-index: -1;
     }
 
     .dots-decorate {
@@ -1740,58 +1739,69 @@ display: none;
     left: 38px;
 }
 .feedback-item {
-    margin: 46px 50px;
-    padding: 23px 35px;
-    background: #FFFFFF;    
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
-    border-radius: 14px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    color: #0031C4;
 
     &__inner {
-        // display: flex;
+        margin: 46px 50px;
+        padding: 23px 35px;
+        background: #FFFFFF;    
+        box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+        border-radius: 14px;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        color: #0031C4;
         display: grid;
-        grid-template-areas: "img title"
-                            "img textItem"
+        // flex-direction: column;
+        grid-template-areas: 'img header'
+        'img title';
+
                            
     }
 
+    &__header {
+        grid-area: header;
+    }
     &__info {
-        grid-area: title;
+       display: flex;
+       flex-wrap: wrap;
     }
     &__img {
         grid-area: img;
-        position: relative;
-        bottom: 40px;
-        display: block;
-        max-width: 100%;
-        max-height: 100%;
-        object-fit: cover;
-        border-radius: 28px;
-        border-right: 4px solid #0031C4;
-        border-bottom: 4px solid #0031C4;
-        margin-right: 35px;
+        // min-width: 100px;
+
+        img {
+            position: relative;
+            bottom: 40px;
+            display: block;
+            // width: 100px;
+            // height: 100px;
+            // min-width: 100px;
+            // min-height: 100px;
+            // max-width: 100%;
+            // max-height: 100%;
+            // object-fit: cover;
+            border-radius: 28px;
+            border-right: 4px solid #0031C4;
+            border-bottom: 4px solid #0031C4;
+            margin-right: 35px;
+        }
+       
     }
     
     &__title {
         // grid-area: title;
         font-size: 22px;
-     
         margin-bottom: 15px;
     }
 
     &__subtitle {
-        // grid-area: subtitle;
-
+       
         font-size: 12px;
         margin-bottom: 15px;
     }
 
     &__text {
-        grid-area: textItem;
-
+        grid-area: title;
         font-size: 14px;
         color: #6F6F6F;
     }
@@ -1967,6 +1977,7 @@ background: #0052d5;
         background: linear-gradient(185.19deg, #FF0000 9.11%, #CE0000 98.12%);
         font-style: normal;
         font-size: 22px;
+        color: #fff;
         // margin-left: auto;
     }
   
