--- a/less/media.less
+++ b/less/media.less
@@ -36,16 +36,12 @@
 
 
 @media screen and (max-width: 1600px) {
-
     .rectangle-decorate {
         right: 50%;
         top: -142px;
-     
         width: 989.42px;
         height: 812.9px;
         
-      
-    
         &__inner {
             width: 939.89px;
             height: 760.76px;
@@ -55,21 +51,22 @@
 
     .header-slider {
       
-    
         .dots-img {
             width: 64px;
             height: 50px;
         }
+
+       
         .arrow-decorate {
             position: absolute;
             top: -60px;
             left: 20px;
-          z-index: 1;
+            z-index: 1;
             &--right {
                 left: 93%;
                 top: -33px;
-                              width: 111.32px;
-height: 168.24px;
+                width: 111.32px;
+                height: 168.24px;
             }
         }
         
@@ -84,11 +81,8 @@ height: 168.24px;
         }
     
         &__mail-title {
-            font-style: italic;
-            font-weight: 500;
-            font-size: 74px; //
-            text-transform: uppercase;
-            margin-top: 24px; //
+            font-size: 74px; 
+            margin-top: 24px; 
             margin-bottom: 0;
         }
     
@@ -102,10 +96,7 @@ height: 168.24px;
         }
     
         &__subtitle {
-            font-style: italic;
-            font-weight: bold;
-            font-size: 28px;//
-            color: #FF0000;
+            font-size: 28px;
         }
     
         &__info {
@@ -130,23 +121,18 @@ height: 168.24px;
                 color: #FFFFFF;
                 border-left: 3px solid rgba(255,255,255, 0.8);
                 opacity: 0.8; 
+
+                &--active {
+                    font-size: 25px;
+                    line-height: 29px;
+                    margin-left: 0;
+                }
             }
     
-            &-num {
-                display: block;
-                padding: 12px 18px;
-                text-align: center;
-            }
-            &-icon {
-                display: none;
-            }
+
         }
     
-        &__buttons {
-            top: 75px;
-            right: -115px;
-            position: absolute;
-        }
+
     }
     
     .universities {
@@ -463,9 +449,7 @@ height: 168.24px;
         padding: 12px 26px;
         margin-left: auto;
     }
-    .rectangle-decorate-block {
-        display: none;
-    }
+    
     .social-nav {
         right: 0;
     }
