--- a/css/media.css
+++ b/css/media.css
@@ -302,6 +302,72 @@
     justify-content: center;
     margin: 50px -20px 0;
   }
+  .rectangle-decorate {
+    right: 40%;
+    width: 1129.71px;
+    height: 929.67px;
+    /* left: -583px; */
+    top: 19.83px;
+    background: rgba(0, 150, 235, 0.7);
+    border-radius: 28px;
+    /* #0096EB */
+    transform: matrix(0.71, -1.16, 0.43, 0.71, 0, 0);
+  }
+  .rectangle-decorate__inner {
+    width: 1073.06px;
+    height: 870.04px;
+    top: 2px;
+    left: 19px;
+    background: linear-gradient(273.52deg, #0066ff -9.04%, #00369c 41.93%);
+    opacity: 0.85;
+  }
+  .header-slider {
+    background-position: 64%, 40%;
+  }
+  .header-slider__block {
+    width: 40vw;
+  }
+  .header-slider__mail-title {
+    font-size: 68px;
+  }
+  .header-slider__assistant-subtitle {
+    font-style: italic;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    text-transform: uppercase;
+    margin-bottom: 18px;
+  }
+  .header-slider__subtitle {
+    font-size: 28px;
+  }
+  .header-slider__info {
+    font-size: 14px;
+    color: #FFFFFF;
+    letter-spacing: -0.02em;
+    margin-bottom: 50px;
+  }
+  .header-slider__nav {
+    position: relative;
+    margin-top: 40px;
+    padding-bottom: 30px;
+    max-width: 70px;
+  }
+  .header-slider__nav-item {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 15px;
+    line-height: 18px;
+    color: #FFFFFF;
+    border-left: 3px solid rgba(255, 255, 255, 0.8);
+    opacity: 0.8;
+  }
+  .header-slider__nav-item--active {
+    font-size: 25px;
+    line-height: 29px;
+    margin-left: 0;
+  }
   .benefits-item {
     margin: 20px;
   }
@@ -372,7 +438,29 @@
   .header--sticky {
     opacity: 1;
   }
-  .header-assistent-slider,
+  .header-slider {
+    padding-bottom: 100px;
+  }
+  .header-slider__buttons {
+    top: 40px;
+  }
+  .assistent-slider-wrap {
+    max-width: 590px;
+  }
+  .assistent-slider-item {
+    max-width: 185px;
+    margin: 0 7px;
+  }
+  .header-slider__nav {
+    max-width: 36px;
+  }
+  .header-assistent-slider {
+    max-width: 590px;
+    left: 56%;
+  }
+  .header-slider__nav-num {
+    padding: 3px 13px;
+  }
   .connection-info__item--tablet,
   .connection-info__btn--tablet,
   .social-links-list,
@@ -389,6 +477,30 @@
     padding: 7px;
     bottom: -31px;
     right: 10px;
+  }
+  .rectangle-decorate-block {
+    right: -85px;
+  }
+  .rectangle-decorate-block__red {
+    width: 177.17px;
+    height: 177.17px;
+  }
+  .rectangle-decorate-block__transparent {
+    width: 153.17px;
+    height: 153.17px;
+    left: 136px;
+  }
+  .rectangle-decorate-block__arr-white {
+    width: 72.19px;
+    height: 110.7px;
+    top: -51px;
+    left: -8px;
+  }
+  .rectangle-decorate-block__arr-transparent {
+    width: 72.19px;
+    height: 110.7px;
+    top: -58px;
+    left: 17px;
   }
   .benefits-items {
     margin: 50px 0 0 0;
@@ -413,9 +525,6 @@
   }
 }
 @media screen and (max-width: 720px) {
-  .header-slider__nav--mobile {
-    display: block;
-  }
   .slider-line {
     display: none;
   }
