--- a/css/media.css
+++ b/css/media.css
@@ -525,9 +525,6 @@
   }
 }
 @media screen and (max-width: 720px) {
-  .slider-line {
-    display: none;
-  }
   .steps-wrap {
     flex-direction: column;
     justify-content: center;
@@ -577,11 +574,6 @@
     border-bottom: 4px solid #0031C4;
     margin-right: 35px;
   }
-  .header-slider__buttons {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-  }
 }
 @media screen and (max-width: 500px) {
   .container {
@@ -620,7 +612,33 @@
   .square-decorate {
     display: none;
   }
-  /* position: absolute; */
+  .header-slider__buttons {
+    display: none;
+  }
+  .slider-header-btn {
+    display: block;
+    position: absolute;
+    top: 50%;
+    z-index: 999;
+  }
+  .slider-header-btn--mobile-prev {
+    left: 10px;
+  }
+  .slider-header-btn--mobile-next {
+    right: 10px;
+  }
+  .rectangle-decorate-block,
+  .assistent-slider-wrap,
+  .btn--header-slider,
+  .header-slider__info {
+    display: none;
+  }
+  .universities .square-decorate {
+    display: none;
+  }
+  .header-slider__mail-title {
+    font-size: 36px;
+  }
   .header-slider__nav {
     position: relative;
     margin-top: 40px;
@@ -628,6 +646,7 @@
     padding-bottom: 30px;
     max-width: 100vw;
     left: -20px;
+    bottom: -137px;
   }
   .header-slider__nav-list {
     display: flex;
@@ -650,8 +669,7 @@
   .header-slider__nav-num {
     padding: 0px;
   }
-  .header-slider__buttons {
-    position: absolute;
-    z-index: 9999;
+  .slider-line {
+    display: none;
   }
 }
