--- a/css/assistant.css
+++ b/css/assistant.css
@@ -1,29 +1,45 @@
 .comment-item {
-  padding: 10px;
+  padding: 0 20px 15px;
   margin-top: 40px;
   margin-bottom: 40px;
   max-width: 653px;
   position: relative;
   background: #FFFFFF;
-  border-radius: 24px;
-  -webkit-box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
+  border-top-right-radius: 24px;
+  border-bottom-right-radius: 24px;
+  border-bottom-left-radius: 24px;
+  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
   border: 1px solid #ccc;
+  margin-left: 20px;
   background-color: #fff;
-  z-index: 99;
 }
 .comment-item__title {
-  left: 0;
-  top: -17px;
-  padding: 5px 18px 20px;
+  left: -1px;
+  top: -32px;
+  padding: 5px 20px 1px;
   position: absolute;
-  -webkit-box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25); */
   border: 1px solid #ccc;
-  border-radius: 24px;
+  border-top-right-radius: 24px;
+  border-top-left-radius: 24px;
   background-color: #fff;
   border-bottom: none;
-  z-index: -3;
+}
+.comment-item__title-wrap {
+  position: relative;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 133.3%;
+  color: #0066FF;
+}
+.comment-item__line {
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(207.28deg, #ff0000 9.11%, #ce0000 98.12%);
+  border-radius: 18.5px;
+  border: none;
+  outline: none;
 }
 .comment-item__date {
   font-size: 10px;
