--- a/css/media.css
+++ b/css/media.css
@@ -194,7 +194,8 @@
   .button--sticky {
     display: none;
   }
-  .connection-info__item--menu {
+  .connection-info__item--menu,
+  .connection-info__item--search {
     display: flex;
   }
   .academic-header .diamond-decorate {
@@ -461,13 +462,15 @@
   .header-slider__nav-num {
     padding: 3px 13px;
   }
-  .connection-info__item--tablet,
   .connection-info__btn--tablet,
+  .connection-info__item--search,
+  .connection-info--tablet-main,
   .social-links-list,
   .social-nav {
     display: none;
   }
-  .social-links-list--mobile {
+  .social-links-list--mobile,
+  .social-links-list--menu {
     display: flex;
   }
   .connection-info__btn--sticky {
