--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,10 @@ a {
   display: flex;
   justify-content: flex-start;
 }
+.connection-info__item--menu {
+  display: flex;
+  justify-content: space-between;
+}
 .connection-info__item--search-menu {
   display: flex;
   justify-content: flex-start;
@@ -301,7 +305,7 @@ a {
   font-weight: bold;
   font-size: 20px;
 }
-.connection-info #menu {
+#menu {
   display: none;
 }
 .search {
@@ -473,6 +477,7 @@ summary {
 }
 .navigation-menu {
   font-family: Roboto;
+  margin-bottom: 150px;
 }
 .navigation-menu__wrap {
   margin-top: 15px;
