--- a/less/style.less
+++ b/less/style.less
@@ -273,6 +273,11 @@ a{
     justify-content: flex-start;
 }
 
+.connection-info__item--menu {
+    display: flex;
+    justify-content: space-between;
+}
+
 .connection-info__item--search-menu{
     display: flex;
     justify-content: flex-start;
@@ -363,10 +368,6 @@ a{
         
     }
 }
-.connection-info
-
-
-
 
 
 #menu {
@@ -571,6 +572,7 @@ summary {
 
 .navigation-menu {
     font-family: Roboto;
+    margin-bottom: 150px;
 
     &__wrap {
         margin-top: 15px;
