--- a/css/media.css
+++ b/css/media.css
@@ -195,8 +195,19 @@
     display: none;
   }
   .connection-info__item--menu,
-  .connection-info__item--search {
+  .connection-info__item--search,
+  .connection-info__item--search-menu {
     display: flex;
+  }
+  .connection-info__item--menu {
+    justify-content: space-between;
+    margin-bottom: 16px;
+  }
+  .connection-info__item--search-menu {
+    justify-content: flex-start;
+  }
+  .connection-info__btn--menu {
+    margin-left: 0;
   }
   .academic-header .diamond-decorate {
     display: none;
@@ -395,6 +406,9 @@
     left: 50%;
     transform: translate(-50%, 0);
   }
+  .connection-info__btn--menu {
+    margin-left: 0;
+  }
 }
 @media screen and (max-width: 890px) {
   .connection-info__btn {
@@ -430,6 +444,9 @@
   }
   .footer-items {
     margin: 0 -20px 0 -20px;
+  }
+  .connection-info__btn--menu {
+    margin-left: 0;
   }
   .admission-item-wrap {
     flex-direction: column;
@@ -473,6 +490,9 @@
   .social-links-list--menu {
     display: flex;
   }
+  .connection-info__item--search-menu {
+    justify-content: flex-start;
+  }
   .connection-info__btn--sticky {
     display: block;
   }
@@ -480,6 +500,12 @@
     padding: 7px;
     bottom: -31px;
     right: 10px;
+  }
+  .connection-info__item--search-menu {
+    display: flex;
+  }
+  .connection-info__btn--menu {
+    margin-left: 0;
   }
   .rectangle-decorate-block {
     right: -85px;
