--- a/css/media.css
+++ b/css/media.css
@@ -153,6 +153,9 @@
   }
 }
 @media screen and (max-width: 1200px) {
+  .header-slider__mail-title {
+    font-size: 68px;
+  }
   .header__nav {
     display: none;
   }
@@ -322,7 +325,6 @@
     top: 19.83px;
     background: rgba(0, 150, 235, 0.7);
     border-radius: 28px;
-    /* #0096EB */
     transform: matrix(0.71, -1.16, 0.43, 0.71, 0, 0);
   }
   .rectangle-decorate__inner {
@@ -340,7 +342,7 @@
     width: 40vw;
   }
   .header-slider__mail-title {
-    font-size: 68px;
+    font-size: 59px;
   }
   .header-slider__assistant-subtitle {
     font-style: italic;
@@ -458,6 +460,9 @@
   }
   .header-slider {
     padding-bottom: 100px;
+  }
+  .header-slider__mail-title {
+    font-size: 45px;
   }
   .header-slider__buttons {
     top: 40px;
@@ -603,70 +608,37 @@
     border-bottom: 4px solid #0031C4;
     margin-right: 35px;
   }
-}
-@media screen and (max-width: 500px) {
-  .container {
-    width: 100%;
-    padding: 0 20px;
+  .rectangle-decorate {
+    height: 436.23px;
+    width: 436.23px;
+    top: -39%;
+    background: rgba(0, 150, 235, 0.7);
+    border-radius: 28px;
+    transform: skewX(-45deg);
   }
-  .connection-info-tablet {
-    width: 100%;
-    justify-content: space-between;
+  .rectangle-decorate__inner {
+    height: 430.23px;
+    width: 430.23px;
+    top: -16px;
+    left: -30px;
+    background: linear-gradient(273.52deg, #0066ff -9.04%, #00369c 41.93%);
+    border-radius: 28px;
   }
-  .navigation-item--tablet {
-    margin-right: 1%;
-  }
-  .navigation-item__link {
-    font-size: 8px;
-  }
-  .navigation-item__icon {
-    margin-right: 5px;
-    width: 9px;
-    height: 9px;
-  }
-  .header-wrap {
-    display: flex;
-    justify-content: space-between;
-  }
-  .logo--header {
-    flex-grow: 0;
-  }
-  .logo--header img {
-    height: 25px;
-    width: 113px;
-  }
-  #menu {
-    margin-left: 0;
-  }
-  .square-decorate {
-    display: none;
-  }
-  .header-slider__buttons {
-    display: none;
-  }
-  .slider-header-btn {
-    display: block;
-    position: absolute;
-    top: 50%;
-    z-index: 999;
-  }
-  .slider-header-btn--mobile-prev {
-    left: 10px;
-  }
-  .slider-header-btn--mobile-next {
-    right: 10px;
-  }
-  .rectangle-decorate-block,
-  .assistent-slider-wrap,
-  .btn--header-slider,
-  .header-slider__info {
-    display: none;
-  }
-  .universities .square-decorate {
-    display: none;
+  .header-subtitle-decorate {
+    margin-left: -22px;
   }
   .header-slider__mail-title {
     font-size: 36px;
+  }
+  .header-slider__subtitle {
+    font-size: 12.5px;
+  }
+  .header-slider .dots-img {
+    width: 27px;
+    height: 21px;
+  }
+  .header-slider__assistant-subtitle {
+    font-size: 15px;
   }
   .header-slider__nav {
     position: relative;
@@ -700,5 +672,88 @@
   }
   .slider-line {
     display: none;
+  }
+  .square-decorate {
+    display: none;
+  }
+  .btn--header-slider {
+    padding: 7px;
+    font-size: 12px;
+  }
+  .header-slider__buttons {
+    display: none;
+  }
+  .slider-header-btn {
+    display: block;
+    position: absolute;
+    top: 64%;
+    z-index: 999;
+  }
+  .slider-header-btn--mobile-prev {
+    left: 10px;
+  }
+  .slider-header-btn--mobile-next {
+    right: 10px;
+  }
+  .rectangle-decorate-block,
+  .assistent-slider-wrap,
+  .header-slider__info {
+    display: none;
+  }
+  .universities .square-decorate {
+    display: none;
+  }
+}
+@media screen and (max-width: 570px) {
+  .container {
+    width: 100%;
+    padding: 0 20px;
+  }
+  .connection-info-tablet {
+    width: 100%;
+    justify-content: space-between;
+  }
+  .navigation-item--tablet {
+    margin-right: 1%;
+  }
+  .navigation-item__link {
+    font-size: 8px;
+  }
+  .navigation-item__icon {
+    margin-right: 5px;
+    width: 9px;
+    height: 9px;
+  }
+  .header-wrap {
+    display: flex;
+    justify-content: space-between;
+  }
+  .logo--header {
+    flex-grow: 0;
+  }
+  .logo--header img {
+    height: 25px;
+    width: 113px;
+  }
+  #menu {
+    margin-left: 0;
+  }
+  .rectangle-decorate {
+    top: -30%;
+    left: -148px;
+  }
+  .header-slider__mail-title {
+    margin-top: 0;
+    font-size: 33px;
+  }
+  .slider-header-btn {
+    top: 50%;
+  }
+  .header-slider {
+    background-position: 71%, 40%;
+  }
+  .header-slider__nav {
+    position: relative;
+    margin-top: 176px;
   }
 }
